--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -10,20 +10,24 @@ name: Dashboard update
 
 jobs:
   Dashboard-update:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      RENV_PATHS_ROOT: ~/.local/share/renv
     steps:
       - uses: actions/checkout@v2
-      - uses: r-lib/actions/setup-r@v1
+      - uses: r-lib/actions/setup-r@v2
 
       - name: Cache packages
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
-          path: ~\AppData\Local\renv
+          path: ${{ env.RENV_PATHS_ROOT }}
           key: ${{ runner.os }}-renv-${{ hashFiles('**/renv.lock') }}
           restore-keys: |
             ${{ runner.os }}-renv-
+
+      - name: Install libgit2-dev
+        run: sudo apt install libgit2-dev
 
       - name: Restore packages
         run: |
@@ -36,9 +40,7 @@ jobs:
           install.packages(c("rcmdcheck", "sessioninfo", "devtools"))
         shell: Rscript {0}
 
-      - name: Install pandoc
-        run: |
-          choco install pandoc
+      - uses: r-lib/actions/setup-pandoc@v2
 
       - name: Render Rmarkdown
         run: |
